--- a/css/css.css
+++ b/css/css.css
@@ -8,7 +8,7 @@ html {
   font-size: 20px;
 }
 body {
-  background-color: #f7f7f7;
+  background: linear-gradient(to top,#fff 30%,#f7f7f7,#eee,#999,#666);
 }
 header {
   height: 5.4rem;
@@ -66,7 +66,52 @@ main section p {
   text-indent: 2rem;
 }
 span.syntax {
-  color: #0f0;
+  color: #f00;
   font-size: 1.2rem;
   margin: 0 1rem 0 0;
+}
+@media screen and (max-width: 1080px) {
+  ul.header-nav li a {
+    font-size: 1.5rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  ul.header-nav li {
+    min-width: 6rem;
+  }
+  ul.header-nav li a {
+    font-size: 1rem;
+  }
+}
+@media screen and (max-width: 320px) {
+  ul.header-nav {
+    flex-flow: wrap;
+  }
+  ul.header-nav li {
+    flex: 1 100%;
+    height: 50%;
+  }
+  ul.header-nav li a {
+    line-height: calc(5.4rem * .45);
+    position: relative;
+  }
+  ul.header-nav li a::after {
+    background-color: rgba(255,0,255,.7);
+    bottom: 0;
+    content: '';
+    display: block;
+    height: .1rem;
+    position: absolute;
+    transform: scaleX(0);
+    transition: .3s;
+    width: 100%;
+  }
+  ul.header-nav li a:hover {
+    border-radius: 0;
+    box-shadow: none;
+  }
+  ul.header-nav li a:hover::after {
+    
+    transform: scaleX(1);
+  }
 }
